crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT strip('base hidden rebel spaceship strike'::tsvector);"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      StripP@7..12 "strip"
      Ascii40@12..13 "("
      TypeCast@13..59
        AConst@13..49
          Sconst@13..49 "'base hidden rebel sp ..."
        Typecast@49..51 "::"
        TypeName@51..59
          Ident@51..59 "tsvector"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

