crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@199.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_delete(to_tsvector('english', 'Rebel spaceships, striking from a hidden base'), 'spaceship');"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..101
    FuncCall@7..101
      Ident@7..16 "ts_delete"
      Ascii40@16..17 "("
      FuncCall@17..87
        Ident@17..28 "to_tsvector"
        Ascii40@28..29 "("
        AConst@29..38
          Sconst@29..38 "'english'"
        Ascii44@38..39 ","
        Whitespace@39..40 " "
        AConst@40..87
          Sconst@40..87 "'Rebel spaceships, st ..."
      Ascii41@87..88 ")"
      Ascii44@88..89 ","
      Whitespace@89..90 " "
      AConst@90..101
        Sconst@90..101 "'spaceship'"
  Ascii41@101..102 ")"
  Ascii59@102..103 ";"

